yamls/wic-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: wic-dashboard
  namespace: wic
spec:
  type: ClusterIP
  selector:
    app: wic-dashboard
  ports:
    - name: dashboard
      port: 3310
      targetPort: 3310
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wic-dashboard-deployment
  namespace: wic
  labels:
    app: wic-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wic-dashboard
  template:
    metadata:
      labels:
        app: wic-dashboard
    spec:
      containers:
      - name: wic-dashboard
        image: wichan7/wic-dashboard:0.0.5
        ports:
        - containerPort: 3310
