yamls/wic-mongo-primary.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo-primary-0
  namespace: wic
  labels:
    wic: mongo-primary
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    wic: mongo-primary
