yamls/wic-redis-primary.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-primary
  namespace: wic
  labels:
    wic: redis-primary
spec:
  ports:
  - port: 6379
    targetPort: 6379
  clusterIP: None
  selector:
    wic: redis-primary
