yamls/wic-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    kubernetes.io/ingress.class: "nginx"
  name: wic-ingress-nginx
  namespace: wic
spec:
  rules:
  - host: api.wichan.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wic-api
            port:
              number: 3311
  - host: dashboard.wichan.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wic-dashboard
            port:
              number: 3310
